# uloz-to-daemon

./: CMakeLists.txt
data/: samples
src/: CCaptcha.cpp  CCaptcha.h  CCaptchaLetter.cpp  CCaptchaLetter.h  CCaptchaSolver.cpp  CCaptchaSolver.h  CCommunicationManager.cpp  CCommunicationManager.h  CDaemon.cpp  CDaemon.h  CDaemon_communication.cpp  CDownload.cpp  CDownload.h  CDownloadManager.cpp  CDownloadManager.h  CNetworkManager.cpp  CNetworkManager.h  main.cpp
